@@ -12,6 +12,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
@@ -23,6 +24,7 @@ public class VendingMachineDataInitializer {
     @Bean
     CommandLineRunner init() {
         return args -> {
+
             Product coke = Product.of("Coke", 1.20, 3, ProductType.DRINK);
             Product dietCoke = Product.of("Diet Coke", 1.10, 5, ProductType.DRINK);
             Product redBull = Product.of("RedBull", 1.20, 4, ProductType.DRINK);
@@ -30,14 +32,16 @@ public class VendingMachineDataInitializer {
             Product mars = Product.of("Mars", 0.70, 15, ProductType.CHOCOLATE);
             Product chewingGum = Product.of("Chewing-gum", 1.00, 3, ProductType.OTHER);
 
-            productRepo.saveAll(Arrays.asList(coke, dietCoke, redBull, snickers, mars, chewingGum));
-            productRepo.findAll().forEach(System.out::println);
+            productRepo
+                    .saveAll(List.of(coke, dietCoke, redBull, snickers, mars, chewingGum))
+                    .forEach(System.out::println);
 
             Stat totalAmountSold = Stat.of(StatKey.AMOUNT_SOLD, "Total amount sold", "0.0");
             Stat totalProductsDelivered = Stat.of(StatKey.PRODUCTS_DELIVERED, "Total products delivered", "0");
 
-            statsRepo.saveAll(Arrays.asList(totalAmountSold, totalProductsDelivered));
-            statsRepo.findAll().forEach(System.out::println);
+            statsRepo
+                    .saveAll(List.of(totalAmountSold, totalProductsDelivered))
+                    .forEach(System.out::println);
         };
     }
 
